--- a/index.html
+++ b/index.html
@@ -10,85 +10,139 @@
 <body>
     <div id="board">
         <div id="row-1" class="row">
-            <div id="cell-1-1" class="cell red"></div>
-            <div id="cell-1-2" class="cell black"></div>
-            <div id="cell-1-3" class="cell red"></div>
-            <div id="cell-1-4" class="cell black"></div>
-            <div id="cell-1-5" class="cell red"></div>
-            <div id="cell-1-6" class="cell black"></div>
-            <div id="cell-1-7" class="cell red"></div>
-            <div id="cell-1-8" class="cell black"></div>
+            <div id="0" class="cell red"></div>
+            <div id="cell-1-2" class="cell black empty">
+                <div class="checker red-checker"></div>
+            </div>
+            <div id="1" class="cell red"></div>
+            <div id="cell-1-4" class="cell black empty">
+                <div class="checker red-checker"></div>
+            </div>
+            <div id="2" class="cell red"></div>
+            <div id="cell-1-6" class="cell black empty">
+                <div class="checker red-checker"></div>
+            </div>
+            <div id="3" class="cell red"></div>
+            <div id="cell-1-8" class="cell black empty">
+                <div class="checker red-checker"></div>
+            </div>
         </div>
         <div id="row-2" class="row">
-            <div id="cell-1-1" class="cell black"></div>
-            <div id="cell-1-2" class="cell red"></div>
-            <div id="cell-1-3" class="cell black"></div>
-            <div id="cell-1-4" class="cell red"></div>
-            <div id="cell-1-5" class="cell black"></div>
-            <div id="cell-1-6" class="cell red"></div>
-            <div id="cell-1-7" class="cell black"></div>
-            <div id="cell-1-8" class="cell red"></div>
+            <div id="4" class="cell black empty">
+                <div class="checker red-checker"></div>
+            </div>
+            <div id="cell-2-2" class="cell red empty"></div>
+            <div id="5" class="cell black empty">
+                <div class="checker red-checker"></div>
+            </div>
+            <div id="6" class="cell red"></div>
+            <div id="cell-2-5" class="cell black empty">
+                <div class="checker red-checker"></div>
+            </div>
+            <div id="7" class="cell red"></div>
+            <div id="cell-2-7" class="cell black empty">
+                <div class="checker red-checker"></div>
+            </div>
+            <div id="8" class="cell red"></div>
         </div>
-        <div id="row-1" class="row">
-            <div id="cell-1-1" class="cell red"></div>
-            <div id="cell-1-2" class="cell black"></div>
-            <div id="cell-1-3" class="cell red"></div>
-            <div id="cell-1-4" class="cell black"></div>
-            <div id="cell-1-5" class="cell red"></div>
-            <div id="cell-1-6" class="cell black"></div>
-            <div id="cell-1-7" class="cell red"></div>
-            <div id="cell-1-8" class="cell black"></div>
+        <div id="row-3" class3="row">
+            <div id="cell-3-1" class="cell red"></div>
+            <div id="9" class="cell black empty">
+                <div class="checker red-checker"></div>
+            </div>
+            <div id="cell-3-3" class="cell red"></div>
+            <div id="10" class="cell black empty">
+                <div class="checker red-checker"></div>
+            </div>
+            <div id="cell-3-5" class="cell red"></div>
+            <div id="11" class="cell black empty">
+                <div class="checker red-checker"></div>
+            </div>
+            <div id="cell-3-7" class="cell red"></div>
+            <div id="12" class="cell black empty">
+                <div class="checker red-checker"></div>
+            </div>
         </div>
-        <div id="row-2" class="row">
-            <div id="cell-1-1" class="cell black"></div>
-            <div id="cell-1-2" class="cell red"></div>
-            <div id="cell-1-3" class="cell black"></div>
-            <div id="cell-1-4" class="cell red"></div>
-            <div id="cell-1-5" class="cell black"></div>
-            <div id="cell-1-6" class="cell red"></div>
-            <div id="cell-1-7" class="cell black"></div>
-            <div id="cell-1-8" class="cell red"></div>
+        <div id="row-4" class="row">
+            <div id="cell-4-1" class="cell black empty"></div>
+            <div id="cell-4-2" class="cell red empty"></div>
+            <div id="cell-4-3" class="cell black empty"></div>
+            <div id="cell-4-4" class="cell red empty"></div>
+            <div id="cell-4-5" class="cell black empty"></div>
+            <div id="cell-4-6" class="cell red empty"></div>
+            <div id="cell-4-7" class="cell black empty"></div>
+            <div id="cell-4-8" class="cell red empty"></div>
         </div>
-        <div id="row-1" class="row">
-            <div id="cell-1-1" class="cell red"></div>
-            <div id="cell-1-2" class="cell black"></div>
-            <div id="cell-1-3" class="cell red"></div>
-            <div id="cell-1-4" class="cell black"></div>
-            <div id="cell-1-5" class="cell red"></div>
-            <div id="cell-1-6" class="cell black"></div>
-            <div id="cell-1-7" class="cell red"></div>
-            <div id="cell-1-8" class="cell black"></div>
+        <div id="row-5" class="row">
+            <div id="cell-5-1" class="cell red empty"></div>
+            <div id="cell-5-2" class="cell black empty"></div>
+            <div id="cell-5-3" class="cell red empty"></div>
+            <div id="cell-5-4" class="cell black empty"></div>
+            <div id="cell-5-5" class="cell red empty"></div>
+            <div id="cell-5-6" class="cell black empty"></div>
+            <div id="cell-5-7" class="cell red empty"></div>
+            <div id="cell-5-8" class="cell black empty"></div>
         </div>
-        <div id="row-2" class="row">
-            <div id="cell-1-1" class="cell black"></div>
-            <div id="cell-1-2" class="cell red"></div>
-            <div id="cell-1-3" class="cell black"></div>
-            <div id="cell-1-4" class="cell red"></div>
-            <div id="cell-1-5" class="cell black"></div>
-            <div id="cell-1-6" class="cell red"></div>
-            <div id="cell-1-7" class="cell black"></div>
-            <div id="cell-1-8" class="cell red"></div>
+        <div id="row-6" class="row">
+            <div id="13" class="cell black">
+                <div class="checker black-checker"></div>
+            </div>
+            <div id="cell-6-2" class="cell red"></div>
+            <div id="14" class="cell black">
+                <div class="checker black-checker"></div>
+            </div>
+            <div id="cell-6-4" class="cell red"></div>
+            <div id="15" class="cell black">
+                <div class="checker black-checker"></div>
+            </div>
+            <div id="cell-6-6" class="cell red"></div>
+            <div id="16" class="cell black">
+                <div class="checker black-checker"></div>
+            </div>
+            <div id="cell-6-8" class="cell red"></div>
         </div>
-        <div id="row-1" class="row">
-            <div id="cell-1-1" class="cell red"></div>
-            <div id="cell-1-2" class="cell black"></div>
-            <div id="cell-1-3" class="cell red"></div>
-            <div id="cell-1-4" class="cell black"></div>
-            <div id="cell-1-5" class="cell red"></div>
-            <div id="cell-1-6" class="cell black"></div>
-            <div id="cell-1-7" class="cell red"></div>
-            <div id="cell-1-8" class="cell black"></div>
+        <div id="row-7" class="row">
+            <div id="17" class="cell red"></div>
+            <div id="cell-7-2" class="cell black">
+                <div class="checker black-checker"></div>
+            </div>
+            <div id="18" class="cell red"></div>
+            <div id="cell-7-4" class="cell black">
+                <div class="checker black-checker"></div>
+            </div>
+            <div id="18" class="cell red"></div>
+            <div id="cell-7-6" class="cell black">
+                <div class="checker black-checker"></div>
+            </div>
+            <div id="19" class="cell red"></div>
+            <div id="cell-7-8" class="cell black">
+                <div class="checker black-checker"></div>
+            </div>
         </div>
-        <div id="row-2" class="row">
-            <div id="cell-1-1" class="cell black"></div>
-            <div id="cell-1-2" class="cell red"></div>
-            <div id="cell-1-3" class="cell black"></div>
-            <div id="cell-1-4" class="cell red"></div>
-            <div id="cell-1-5" class="cell black"></div>
-            <div id="cell-1-6" class="cell red"></div>
-            <div id="cell-1-7" class="cell black"></div>
-            <div id="cell-1-8" class="cell red"></div>
+        <div id="row-8" class="row">
+            <div id="20" class="cell black">
+                <div class="checker black-checker"></div>
+            </div>
+            <div id="cell-8-2" class="cell red"></div>
+            <div id="21" class="cell black">
+                <div class="checker black-checker"></div>
+            </div>
+            <div id="cell-8-4" class="cell red"></div>
+            <div id="22" class="cell black">
+                <div class="checker black-checker"></div>
+            </div>
+            <div id="cell-8-6" class="cell red"></div>
+            <div id="23" class="cell black">
+                <div class="checker black-checker"></div>
+            </div>
+            <div id="cell-8-8" class="cell red"></div>
         </div>
     </div>
+    <div class="red-turn-text">
+        Reds turn
+    </div>
+    <p id="divider">|</p>
+    <div class="black-turn-text"> Blacks turn</div>
+    <script src="index.js "></script>
 </body>
 </html>
