added start button and music played when started

--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
             <div class="red-turn-text">
                 Reds turn
             </div>
+            
             <h3 id="divider">|</h3>
             <div class="black-turn-text">
                 Blacks turn
             </div>
         </div>
-        <div id="board-container">
+        <div id="start">
+            <p id="startP">Play Checkers?</p>
+            <br>
+            <button type="button">Play</button>
+        </div>
+            <div id="board-container">
          <table>
             <tr>
                 <td class="noPieceHere"></td>
