added chimes each time player makes a move

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <main>
         <div class="desktop">
             <div class="red-turn-text">
-                Reds turn
+                Red's turn
             </div>
             
             <h3 id="divider">|</h3>
             <div class="black-turn-text">
-                Blacks turn
+                Blue's turn
             </div>
         </div>
         <div id="start">
