--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
+    <link 
+    rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
 </head>
 <body>
     <main>
@@ -13,16 +18,15 @@
             <div class="red-turn-text">
                 Red's turn
             </div>
-            
             <h3 id="divider">|</h3>
             <div class="black-turn-text">
-                Blue's turn
+                Black's turn
             </div>
         </div>
         <div id="start">
             <p id="startP">Play Checkers?</p>
             <br>
-            <button type="button">Play</button>
+            <button id="startButton" type="button">Play</button>
         </div>
             <div id="board-container">
          <table>
@@ -107,6 +111,9 @@
                 <td class="noPieceHere"></td>
             </tr>
         </table>
+    </div>
+    <div id="sound-toggle">
+    <a id="sound" onClick="togglePlay()"><i class="fas fa-volume"></i> On/Off</a>
     </div>
     </main>
     <script src="index.js "></script>
