added ReadMe and cleaned up some code

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <main>
         <div class="desktop">
             <div class="red-turn-text">
-                Red's turn
+                <p>Red's turn</p>
             </div>
             <h3 id="divider">|</h3>
             <div class="black-turn-text">
-                Black's turn
+                <p>Black's turn</p>
             </div>
         </div>
         <div id="start">
