removed p tags that were forgetten to take out

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <main>
         <div class="desktop">
             <div class="red-turn-text">
-                <p>Red's turn</p>
+                Red's turn
             </div>
             <h3 id="divider">|</h3>
             <div class="black-turn-text">
-                <p>Black's turn</p>
+                Black's turn
             </div>
         </div>
         <div id="start">
